--- a/PianoNote/Asset/Category.storyboard
+++ b/PianoNote/Asset/Category.storyboard
@@ -1,7 +1,166 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SC3-03-Eml">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="rIo-hS-JC3">
+            <objects>
+                <navigationController id="SC3-03-Eml" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="z6O-8C-aUF">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="wZQ-Km-RAd" kind="relationship" relationship="rootViewController" id="hDw-7a-fhm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mVJ-7Z-dS2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-959" y="58"/>
+        </scene>
+        <!--Category Manage View Controller-->
+        <scene sceneID="r3t-5I-dn4">
+            <objects>
+                <viewController id="wZQ-Km-RAd" customClass="CategoryManageViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="K7n-mS-QRm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MZ8-Jc-Ssn">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="59" id="RLO-13-DYy" customClass="CategoryManageCell" customModule="PianoNote" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="59"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RLO-13-DYy" id="2H4-Ay-YFp">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="58.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="labe" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mky-eX-Plx">
+                                                    <rect key="frame" x="11" y="11" width="32.5" height="21"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xcv-Hb-GVd">
+                                                    <rect key="frame" x="11" y="35.5" width="27" height="14.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                                    <color key="textColor" red="0.5607843137254902" green="0.5607843137254902" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G2A-jk-PtL">
+                                                    <rect key="frame" x="-24" y="18.5" width="22" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="22" id="7pb-Ok-Vzv"/>
+                                                        <constraint firstAttribute="height" constant="22" id="a3X-SM-mZO"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button" image="tableViewCellButtonUnchecked"/>
+                                                    <state key="selected" image="tableViewCellButtonChecked"/>
+                                                </button>
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="categoryLock" translatesAutoresizingMaskIntoConstraints="NO" id="jwj-0Z-C5R">
+                                                    <rect key="frame" x="52" y="15" width="10" height="13.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="9.5" id="BqC-ie-3wx"/>
+                                                        <constraint firstAttribute="height" constant="13.5" id="YeG-aN-dic"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="jwj-0Z-C5R" firstAttribute="centerY" secondItem="Mky-eX-Plx" secondAttribute="centerY" id="1vk-wp-0D6"/>
+                                                <constraint firstItem="Xcv-Hb-GVd" firstAttribute="top" secondItem="Mky-eX-Plx" secondAttribute="bottom" constant="4" id="EcO-Cs-jsE"/>
+                                                <constraint firstAttribute="bottom" secondItem="Xcv-Hb-GVd" secondAttribute="bottom" constant="8.5" id="O01-gt-vbW"/>
+                                                <constraint firstItem="G2A-jk-PtL" firstAttribute="leading" secondItem="2H4-Ay-YFp" secondAttribute="leading" constant="-24" id="U9l-U1-CH7"/>
+                                                <constraint firstItem="Mky-eX-Plx" firstAttribute="top" secondItem="2H4-Ay-YFp" secondAttribute="top" constant="11" id="gpG-Mx-0hl"/>
+                                                <constraint firstItem="Xcv-Hb-GVd" firstAttribute="leading" secondItem="2H4-Ay-YFp" secondAttribute="leading" constant="11" id="hcY-ac-B1t"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Mky-eX-Plx" secondAttribute="trailing" constant="70" id="k2j-Nl-w4k"/>
+                                                <constraint firstItem="jwj-0Z-C5R" firstAttribute="leading" secondItem="Mky-eX-Plx" secondAttribute="trailing" constant="8.5" id="nCJ-y4-Ue1"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Xcv-Hb-GVd" secondAttribute="trailing" constant="8" id="uvF-0I-Wfd"/>
+                                                <constraint firstItem="Mky-eX-Plx" firstAttribute="leading" secondItem="2H4-Ay-YFp" secondAttribute="leading" constant="11" id="wQJ-1N-yVU"/>
+                                                <constraint firstItem="G2A-jk-PtL" firstAttribute="centerY" secondItem="2H4-Ay-YFp" secondAttribute="centerY" id="zu2-b7-Kuh"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="checkButton" destination="G2A-jk-PtL" id="g3Y-Jo-9Kh"/>
+                                            <outlet property="lockImageView" destination="jwj-0Z-C5R" id="XZf-fe-Job"/>
+                                            <outlet property="subtitleLabel" destination="Xcv-Hb-GVd" id="qAJ-Zr-pFg"/>
+                                            <outlet property="titleLabel" destination="Mky-eX-Plx" id="cRN-qO-8Fj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ewa-AA-bCH">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem title="잠금" id="bQ1-pJ-cEh">
+                                        <connections>
+                                            <action selector="lockButtonTouched:" destination="wZQ-Km-RAd" id="LgX-8O-aZd"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="uI9-ud-Zk0"/>
+                                    <barButtonItem id="tQN-ZX-mrI">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8sg-Ha-Be0">
+                                            <rect key="frame" x="164.5" y="7" width="46" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </button>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="4qJ-kO-918"/>
+                                    <barButtonItem systemItem="trash" id="JoI-Tr-IYv">
+                                        <connections>
+                                            <action selector="trashButtonTouched:" destination="wZQ-Km-RAd" id="f5R-wD-hex"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ewa-AA-bCH" firstAttribute="leading" secondItem="K7n-mS-QRm" secondAttribute="leading" id="NFO-tM-jY5"/>
+                            <constraint firstItem="MZ8-Jc-Ssn" firstAttribute="bottom" secondItem="6ro-wL-I2R" secondAttribute="bottom" id="U1x-yd-XFE"/>
+                            <constraint firstItem="6ro-wL-I2R" firstAttribute="bottom" secondItem="Ewa-AA-bCH" secondAttribute="bottom" id="eLp-lg-9jl"/>
+                            <constraint firstItem="6ro-wL-I2R" firstAttribute="trailing" secondItem="Ewa-AA-bCH" secondAttribute="trailing" id="i7e-UU-eF3"/>
+                            <constraint firstItem="MZ8-Jc-Ssn" firstAttribute="leading" secondItem="6ro-wL-I2R" secondAttribute="leading" id="psu-Zc-fS9"/>
+                            <constraint firstItem="MZ8-Jc-Ssn" firstAttribute="top" secondItem="6ro-wL-I2R" secondAttribute="top" id="wPg-aw-4Pm"/>
+                            <constraint firstItem="6ro-wL-I2R" firstAttribute="trailing" secondItem="MZ8-Jc-Ssn" secondAttribute="trailing" id="y2n-Wc-awi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6ro-wL-I2R"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="OPD-u0-JJl">
+                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="9KP-dE-BJc">
+                            <connections>
+                                <action selector="doneButtonTouched:" destination="wZQ-Km-RAd" id="CSK-xc-JFa"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2Y2-QP-O4x">
+                            <connections>
+                                <action selector="addButtonTouched:" destination="wZQ-Km-RAd" id="1XK-W5-oUU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="categorySelectedCountButton" destination="8sg-Ha-Be0" id="2pQ-r8-fQb"/>
+                        <outlet property="lockBarButton" destination="bQ1-pJ-cEh" id="aVU-2n-LQ3"/>
+                        <outlet property="tableView" destination="MZ8-Jc-Ssn" id="piR-MV-uYp"/>
+                        <outlet property="toolBar" destination="Ewa-AA-bCH" id="OCj-na-tat"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L9t-2Z-4qR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-151.19999999999999" y="56.221889055472268"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="categoryLock" width="9" height="13"/>
+        <image name="tableViewCellButtonChecked" width="22" height="22"/>
+        <image name="tableViewCellButtonUnchecked" width="22" height="22"/>
+    </resources>
 </document>
